@@ -1899,6 +1899,8 @@ typedef struct server_opts server_opts;
 
 struct server_opts
 {
+	s16b runlevel;		/* Glorified shutdown mode */
+	time_t closetime;	/* Server closedown time */
 	char * meta_address;
 	char * bind_name;
 	char * console_password;
