@@ -714,6 +714,7 @@ Change list for PernMangband
 10/02/2002
 - Server/sched bug fix. Sockets closed when connection does not pass
   the Contact() stage. The select mask was being set to the new mask!
+- Added automatic nice shutdown. No more angry players.
 
 ** [B] stands for Bugfix.
 ** [C] stands for Client changes.
